Missing oopmap in patching stubs

XMLWordPrintable

    • b17
    • x86_64
    • linux

        This crash happened at Christmas in Comp_baseline nightlies.

        VM-Options: -server -Xcomp -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:+TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions

              Assignee:
              Nils Eliasson (Inactive)
              Reporter:
              Albert Noll (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: