8031475: Missing oopmap in patching stubs

Add patch test for lir_checkcast in compute_oop_map

Reviewed-by: roland, twisti